# BitcoinToolkit

./: .gitignore  BUG  LICENSE  Makefile  Makefile.am  README.md  configure.ac
include/: address.h  autoheader.py  base.h  common.h  network.h  std.h  string.h  transaction.h
include/bitcointk/: address.h  codec.h  common.h  container.h  crypto.h  machine.h
include/internal/: address.h  common.h
include/internal/codec/: base.h  strings.h
include/internal/container/: CLinkedlist.h  CStack.h
include/internal/crypto/: bigint.h  ntt.h
include/internal/machine/: interpreter.h  operation.h  script.h
src/: address.c  address.h  base.c  btctool.c  common.h  err.c  err.h  main.c  network.c  status.c  status.h  string.c
src/codec/: base.c  codec.h  strings.c
src/container/: CLinkedlist.c  CLinkedlist.h  CLinkledlist.c  CStack.c  CStack.h
src/crypto/: bigint.c  bigint.h  ntt.c
src/machine/: interpreter.c  interpreter.h  operation.c  operation.h  script.c  script.h
src/script/: interpreter.c  interpreter.h  operation.c  operation.h  script.c  script.h
src/std/: std_string.c
test/: CLinkedlist_check.c  CStack_check.c  Makefile.am  configure.ac  main.c  test.h
test/src/: CLinkedlist_check.c  CStack_check.c  Script_check.c
